fixed white spaces in footer, added mobile  version for the footer

--- a/src/main.scss
+++ b/src/main.scss
@@ -8,7 +8,7 @@
 
 // Re-usable classes for bigger screens
 .sec {
-  padding: 0 5%;
+  padding: 0 5% !important;
 }
 
 .sec-cont {
